--- a/app/src/main/res/layout/fragment_pelengator.xml
+++ b/app/src/main/res/layout/fragment_pelengator.xml
@@ -27,12 +27,11 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTBearing" />
 
 
-
     <Button
-        android:id="@+id/button"
+        android:id="@+id/sendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="108dp"
 
         android:text="@string/send"
         app:layout_constraintStart_toStartOf="@+id/editTextLat"
@@ -43,7 +42,7 @@
         android:layout_width="120dp"
         android:layout_height="42dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="100dp"
         android:ems="10"
         android:hint="@string/lat_hint"
         android:inputType="numberDecimal|numberSigned"
@@ -150,11 +149,29 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="16dp"
         android:text="@string/bearing"
         app:layout_constraintStart_toStartOf="@+id/editTextLat"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+    <EditText
+        android:id="@+id/callsignEditText"
+        android:layout_width="206dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintStart_toStartOf="@+id/trueBearingTextView"
+        app:layout_constraintTop_toBottomOf="@+id/trueBearingTextView" />
+
+    <TextView
+        android:id="@+id/callsignTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/callsign"
+        app:layout_constraintStart_toStartOf="@+id/callsignEditText"
+        app:layout_constraintTop_toBottomOf="@+id/callsignEditText" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
