--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -17,6 +17,11 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="@string/settings_header">
+        <EditTextPreference
+            app:key="callsign"
+            app:title="@string/user_callsign"
+            app:useSimpleSummaryProvider="true"
+            />
 
         <ListPreference
             app:entries="@array/map_maptype_entries"
