--- a/app/src/main/res/layout/fragment_pelengator.xml
+++ b/app/src/main/res/layout/fragment_pelengator.xml
@@ -41,8 +41,8 @@
         android:id="@+id/editTextLat"
         android:layout_width="120dp"
         android:layout_height="42dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="64dp"
         android:ems="10"
         android:hint="@string/lat_hint"
         android:inputType="numberDecimal|numberSigned"
@@ -106,29 +106,6 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextMBearing"
         app:layout_constraintVertical_bias="1.0" />
 
-    <ToggleButton
-        android:id="@+id/GPStoggleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="16dp"
-        android:checked="false"
-        android:onClick="toggleUpdatesHandler"
-        android:text="@string/GPS_ToggleButton"
-        android:textOff="@string/GPS_Off"
-        android:textOn="@string/GPS_On"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/text_slideshow" />
-
-    <TextView
-        android:id="@+id/AccuracyTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/accuracy"
-        app:layout_constraintStart_toStartOf="@+id/inclinationTextView"
-        app:layout_constraintTop_toBottomOf="@+id/inclinationTextView" />
-
     <wildfire.volunteers.smokegator.solo.ui.CompassView
         android:id="@+id/compassView"
         android:layout_width="120dp"
@@ -140,10 +117,9 @@
         android:id="@+id/inclinationTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:text="@string/inclination"
-        app:layout_constraintStart_toStartOf="@+id/GPStoggleButton"
-        app:layout_constraintTop_toBottomOf="@+id/GPStoggleButton" />
+        app:layout_constraintStart_toEndOf="@+id/magBearingTextView"
+        app:layout_constraintTop_toBottomOf="@+id/compassView" />
 
     <TextView
         android:id="@+id/textView4"
@@ -158,7 +134,7 @@
         android:id="@+id/callsignEditText"
         android:layout_width="206dp"
         android:layout_height="43dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
