--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,6 +22,7 @@
             android:title="@string/menu_settings" />
     </group>
 
+    <!--
     <item android:title="Communicate">
         <menu>
             <item
@@ -33,6 +34,6 @@
                 android:icon="@drawable/ic_menu_send"
                 android:title="@string/menu_send" />
         </menu>
-    </item>
+    </item> -->
 
 </menu>
