--- a/app/src/main/res/values-v21/arrays.xml
+++ b/app/src/main/res/values-v21/arrays.xml
@@ -2,10 +2,10 @@
 
     <!-- Allowed GoogleMap map types  -->
     <string-array name="map_maptype_entries">
-        <item>Стандартная</item>
-        <item>Ландшафт</item>
-        <item>Спутник</item>
-        <item>Гибридная</item>
+        <item>Standart</item>
+        <item>Landscape</item>
+        <item>Satellit</item>
+        <item>Hybrid</item>
     </string-array>
     <string-array name="map_maptype_values">
         <item>1</item>
