--- a/app/src/main/res/layout/recyclerview_peleng.xml
+++ b/app/src/main/res/layout/recyclerview_peleng.xml
@@ -52,6 +52,16 @@
         app:layout_constraintStart_toEndOf="@+id/compass_view"
         app:layout_constraintTop_toBottomOf="@+id/tvLat" />
 
+    <ImageButton
+        android:id="@+id/sendButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_send_24px" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
