--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -14,7 +14,9 @@
   ~ limitations under the License.
   -->
 
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="@string/settings_header">
         <EditTextPreference
@@ -33,7 +35,25 @@
         <SeekBarPreference
             app:key="pelenglength"
             app:title="@string/peleng_length"
+            app:summary="@string/peleng_length_summary"
             app:defaultValue="20"/>
+
+        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
+            android:defaultValue="@color/color_marker_default"
+            android:key="normal_marker_color"
+            android:summary="@string/color_marker_default_summary"
+            android:title="@string/color_marker_default_title"
+            app:cpv_showAlphaSlider="true"
+            app:cpv_dialogTitle="@string/color_dialog_title"/>
+
+        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
+            android:defaultValue="@color/color_line_default"
+            android:key="normal_line_color"
+            android:summary="@string/color_line_default_summary"
+            android:title="@string/color_line_default_title"
+            app:cpv_showAlphaSlider="true"
+            app:cpv_dialogTitle="@string/color_dialog_title"/>
+
 
     </PreferenceCategory>
 
