--- a/app/src/main/res/layout/fragment_pelengator.xml
+++ b/app/src/main/res/layout/fragment_pelengator.xml
@@ -149,5 +149,24 @@
         app:layout_constraintStart_toStartOf="@+id/callsignEditText"
         app:layout_constraintTop_toBottomOf="@+id/callsignEditText" />
 
+    <Button
+        android:id="@+id/clipboardButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:text="@string/clipboard_button"
+        app:layout_constraintBottom_toBottomOf="@+id/sendButton"
+        app:layout_constraintStart_toEndOf="@+id/sendButton"
+        app:layout_constraintTop_toTopOf="@+id/sendButton" />
+
+    <TextView
+        android:id="@+id/testTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="@+id/sendButton"
+        app:layout_constraintTop_toBottomOf="@+id/sendButton" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
